fix fav/like controls not showing up on gutter widget... make context format more like the content in the iframe (use  pre-formatted)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@9033 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -491,12 +491,20 @@
             background: #f8f8f8;
             padding: 10px;
             margin: -11px 0 0 -11px;
-            min-width: 325px;
+            min-width: 270px;
 			z-index: 999;
 
             .mask {
                 display: none;
             }
+
+			.separator, .time, {
+				@include menu-label-text-treatment;
+				display: inline;
+			}
+			.controls{
+				display: block;
+			}
 
             @include meta-row;
 
@@ -570,6 +578,7 @@
 				padding: 2px 0;
 				font-size: 14px;
 				line-height: 32px;
+				white-space: pre-wrap;
 
 				word-wrap: break-word;
 
